# codex-token-hud-monitor

./: .gitignore  README.md
.codex-plugin/: plugin.json
.github/workflows/: release.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
config/: pricing.json
hooks/: hooks.json
scripts/: hudctl.py  run-codex.ps1
skills/codex-token-hud/: SKILL.md
tests/: sample-turn.jsonl  test_hudctl.py
