[package]
name = "codex-token-hud"
version = "0.1.5"
description = "Codex token usage HUD"
authors = ["喵克酱"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
